# CoinMarketWatcher

./: .gitmodules  CMakeLists.txt  CoinTool.pro  HuobiMarket.cpp  HuobiMarket.h  MainWidget.cpp  MainWidget.h  MainWidget.ui  MarketInterface.cpp  MarketInterface.h  QuantitativeTransaction.cpp  QuantitativeTransaction.h  README.md  main.cpp
src/: WebSocketMessage.h  main.cc  main_widget.cc  main_widget.h  main_widget.ui  market_binance.cc  market_binance.h  market_bitfinex.cc  market_bitfinex.h  market_huobi.cc  market_huobi.h  market_interface.cc  market_interface.h  market_ok.cc  market_ok.h
